--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,14 @@ div {
      text-align: center;
 }
 
+#time {
+     color: white;
+     font-weight: bold;
+     margin-top: 16px;
+     font-size: 16px;
+     font-family: Arial, Helvetica, sans-serif;
+}
+
 .avatar {
      margin: 0 auto;
      overflow: hidden;
